# dab_workflow_template_for_code_agents

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  databricks.yml  instructions.md  main.py  pyproject.toml  run_workflow.sh
.claude/: project-context.md
.claude/skills/: databricks-asset-bundle  mermaid-diagrams-creator  pytest-test-creator  python-code-formatter
diagrams/: document-processing-workflow.mermaid
docs/: PROJECT_PLAN.md  REQUIREMENTS.md  SETUP.md
notebooks/: 00-clean-pipeline-tables.py  01_parse_documents.py  02_extract_document_content.py
resources/: document_processing_pipeline.job.yml
tests/: conftest.py  test_00_clean_pipeline_tables.py  test_01_parse_documents.py  test_02_extract_document_content.py
