[project]
name = "dab-workflow-template"
version = "0.1.0"
description = "Template for creating Databricks workflows with notebooks using Databricks Asset Bundles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.73.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
