[project]
name = "dab-workflow-template"
version = "0.1.0"
description = "Template for creating Databricks workflows with notebooks using Databricks Asset Bundles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.73.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "blackbricks>=0.6.4",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "-v",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Databricks)",
]

[tool.coverage.run]
source = ["notebooks"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long (handled by black)
    "F821",  # undefined name (dbutils, spark are Databricks runtime globals)
    "E402",  # module level import not at top of file (expected in notebooks)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["F821", "E402"]
"tests/*.py" = ["F841"]  # Allow unused variables in tests for mocking

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
